# grafty

./: .gitignore  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  DESIGN.md  FEATURE_PLAN_PHASE2.md  ISSUES.md  LANGUAGE_ROADMAP.md  PHASE_4_2_SUMMARY.md  PHASE_5_1_SUMMARY.md  PROMPT.md  README.md  USAGE.md  pyproject.toml
docs/: CONTRIBUTING.md  PHASE4.2_DESIGN.md  PHASE4.3_PLAN.md  ROADMAP.md
grafty/: __init__.py  __main__.py  cli.py  editor.py  indexer.py  models.py  multi_file_patch.py  patch.py  selectors.py  utils.py
grafty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
grafty/parsers/: __init__.py  bash_ts.py  clojure_fallback.py  clojure_ts.py  csharp_ts.py  css_parser.py  go_ts.py  html_parser.py  java_ts.py  javascript_ts.py  json_parser.py  kotlin_ts.py  markdown_ts.py  org.py  python_ts.py  rust_ts.py  swift_ts.py  typescript_ts.py
grafty/vcs/: __init__.py  git_integration.py
memory/: 2026-02-08.md
tests/: __init__.py  conftest.py  test_bash_parser.py  test_clojure_parser.py  test_csharp_parser.py  test_css_parser.py  test_docstrings.py  test_go_parser.py  test_html_parser.py  test_insert.py  test_java_parser.py  test_javascript_parser.py  test_kotlin_parser.py  test_markdown_parser.py  test_markdown_parser_bugs.py  test_multi_file_patch.py  test_org_parser.py  test_patch.py  test_phase3.py  test_preambles.py  test_python_parser.py  test_rust_parser.py  test_swift_parser.py  test_typescript_parser.py  test_vcs_integration.py
