[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grafty*"]

[project]
name = "grafty"
version = "0.2.0"
description = "Token-optimized structural editing CLI for code/text files"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.19.0",
    "tree-sitter-python>=0.19.0",
    "tree-sitter-markdown>=0.3.0",
    "click>=8.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
grafty = "grafty.cli:main"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "C", "N"]
